TikZ練習帳を追加

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,24 @@
 {
     "cSpell.words": [
+        "batteryshape",
         "braket",
+        "Circu",
+        "Darkgray",
+        "eground",
+        "iloop",
         "infty",
-        "KEKB"
+        "KEKB",
+        "Lightgray",
+        "oscope",
+        "oscopeshape",
+        "pvsource",
+        "qiprobe",
+        "qpprobe",
+        "qvprobe",
+        "Schotkky",
+        "semithick",
+        "smeter",
+        "tlground",
+        "Zener"
     ]
 }
